--- a/PMP/dataset/pmax24h_out/25020230AHOC.md
+++ b/PMP/dataset/pmax24h_out/25020230AHOC.md
@@ -2011,3 +2011,4 @@
 |   12 |  500    | 0.998    | 0.002      | 194.699 |  164.459 |   146.207 | 160.119 | 160.627 |     200.154 |    159.725 | 203.079 | 189.275 |  168.085 |       181.713 |  202.511 |    192.077 | 372.159  |     181.713 |  2264.77   |   8203.41   | 182.396 |       187.938 | 200.323 |    118.437 | 183.094 |      159.822 |   372.258  |  6727.55   |           160.036 |       256.222 |       202.918 |   167.407 |    159.969  |  292.954 |    170.512 |    157.371 |    218.494 |        226.379 |    204.138 |     200.89  |    192.208 |    223.916 |      243.848 |     162.165 |     181.72  |  160.165 |  159.937 | 169.565 |     219.54  |   206.599 |              223.858 | 159.878  |       189.731 |    179.478 |    194.98  |      299.791 |   181.716 |      159.707 | 373.365 |   192.966 |  203.154 | 228.808 |    182.104 | 213.338 | 183.343 |  97.3978 | 181.713 | 372.159  |    180.197 |   159.703  |    196.025 | 160     |         189.643 |  99.9597 |        159.33  |    181.282 | 181.717 |     169.682 |  164.489 |      159.704 |     181.713 |      159.392  |            159.769 |       159.809 |   159.804 |         159.661 | 264.719 |       179.063 |      166.213 |    230.527 |       299.786 | emp_adamowski     | 25020230AHOC |  52 |    0.632489 |
 |   13 |  750    | 0.998667 | 0.00133333 | 199.12  |  165.041 |   146.207 | 160.328 | 160.917 |     205.286 |    159.817 | 210.326 | 193.068 |  169.203 |       184.759 |  208.45  |    196.538 | 392.395  |     184.759 |  3004.79   |  10879      | 185.509 |       191.62  | 206.092 |    118.57  | 186.278 |      159.883 |   392.5    |  8658.16   |           160.103 |       265.935 |       208.913 |   168.786 |    159.982  |  319.658 |    172.267 |    158.566 |    226.167 |        234.794 |    208.905 |     207.151 |    196.339 |    231.131 |      253.259 |     162.732 |     184.766 |  160.255 |  160     | 169.643 |     225.41  |   213.553 |              232.146 | 160.111  |       193.127 |    182.303 |    200.411 |      322.519 |   184.763 |      159.805 | 393.681 |   196.941 |  210.409 | 237.662 |    185.186 | 219.935 | 186.571 |  99.7286 | 184.759 | 392.395  |    183.09  |   159.802  |    200.216 | 160     |         193.47  | 100.312  |        159.588 |    184.289 | 184.763 |     169.722 |  165.154 |      159.802 |     184.759 |      159.594  |            159.846 |       159.873 |   159.869 |         159.774 | 279.591 |       181.734 |      166.282 |    238.275 |       322.294 | emp_adamowski     | 25020230AHOC |  52 |    0.632366 |
 |   14 | 1000    | 0.999    | 0.001      | 202.206 |  165.389 |   146.207 | 160.444 | 161.082 |     208.887 |    159.863 | 215.62  | 195.697 |  169.908 |       186.857 |  212.652 |    199.66  | 406.753  |     186.857 |  3627.34   |  13163.9    | 187.654 |       194.172 | 210.183 |    118.661 | 188.473 |      159.913 |   406.863  | 10267.2    |           160.138 |       272.784 |       213.165 |   169.714 |    159.988  |  340.094 |    173.449 |    159.37  |    231.611 |        240.762 |    212.196 |     211.592 |    199.215 |    236.217 |      259.935 |     163.083 |     186.864 |  160.31  |  160.032 | 169.682 |     229.477 |   218.487 |              238.026 | 160.257  |       195.465 |    184.243 |    204.262 |      339.682 |   186.86  |      159.854 | 408.096 |   199.688 |  215.708 | 243.944 |    187.31  | 224.613 | 188.8   | 101.374  | 186.857 | 406.753  |    185.078 |   159.851  |    203.112 | 160     |         196.126 | 100.555  |        159.732 |    186.358 | 186.861 |     169.741 |  165.551 |      159.852 |     186.857 |      159.695  |            159.884 |       159.905 |   159.902 |         159.831 | 290.288 |       183.561 |      166.317 |    243.772 |       339.277 | emp_adamowski     | 25020230AHOC |  52 |    0.632305 |
+> risk_rate: assuming the return period as the project useful life.
